# hcoil_pkg

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ros2_ci.yaml
hcoil_interfaces/: CMakeLists.txt  README.md  package.xml
hcoil_interfaces/msg/: MagField.msg  VoltAmp.msg
hcoil_pkg/: CMakeLists.txt  dependencies.sh  package.xml
hcoil_pkg/include/hcoil_pkg/: field_node.hpp  psu_node.hpp
hcoil_pkg/launch/: field_launch.py  psu_array_launch.py  psu_devel_launch.py  single_psu_launch.py
hcoil_pkg/scripts/: publish_field.py  request_field.py
hcoil_pkg/src/: field_node.cpp
hcoil_pkg/test/: field_tests.cpp  psu_tests.cpp
include/hcoil_pkg/: field_node.hpp  psu_node.hpp
launch/: field_launch.py  psu_array_launch.py  psu_devel_launch.py  single_psu_launch.py
scripts/: publish_field.py  request_field.py  sweep_axis.py
src/: field_node.cpp  psu_node.cpp
test/: field_tests.cpp  psu_tests.cpp
